When there is a date picker as the last field it was failing to correctly open and flickering in and out. This adds a safe space to the bottom of forms where date pickers can properly express themselves.

--- a/odontotheme/static/css/odonto.css
+++ b/odontotheme/static/css/odonto.css
@@ -271,6 +271,10 @@ label {
   margin-top: 100px;
 }
 
+.content-offset-below-150 {
+  margin-bottom: 150px;
+}
+
 .pathway-offset {
   margin-top: 80px;
 }
